--- a/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
+++ b/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
@@ -49,6 +49,17 @@
 					<li><a data-ui-sref="app.electric-history">알람 및 이력 보기</a></li>
 				</ul>
 			</li>
+			<li>
+				<a class="collapsed" data-target="#sidebar-menu-ups" data-toggle="collapse" data-parent="#sidebar"> 
+					<span class="icon"> <i class="fa fa-folder-open"></i></span> UPS 시스템
+					<i class="toggle fa fa-angle-down"></i>
+				</a>
+				<ul id="sidebar-menu-ups" class="collapse">
+					<li><a data-ui-sref="app.ups-point-manage">관제점보기</a></li>
+					<li><a data-ui-sref="app.ups-graph-manage">경향그래프</a></li>
+					<li><a data-ui-sref="app.ups-history">알람 및 이력 보기</a></li>
+				</ul>
+			</li>
 		</ul>
 		
 		<h5 class="sidebar-nav-title">Emergency</h5>
