--- a/src/main/resources/static/index_appPasteur.html
+++ b/src/main/resources/static/index_appPasteur.html
@@ -201,6 +201,13 @@
 	<script type="text/javascript" src="appPasteur/modules/energy/electric/alarm-manage/alarm-manage.module.js"></script>
 	<script type="text/javascript" src="appPasteur/modules/energy/electric/alarm-manage/alarm-manage.js"></script>
 	
+	<script type="text/javascript" src="appPasteur/modules/energy/ups/alarm-history/alarm-history.module.js"></script>
+	<script type="text/javascript" src="appPasteur/modules/energy/ups/alarm-history/alarm-history.js"></script>
+	<script type="text/javascript" src="appPasteur/modules/energy/ups/graph-manage/graph-manage.module.js"></script>
+	<script type="text/javascript" src="appPasteur/modules/energy/ups/graph-manage/graph-manage.js"></script>
+	<script type="text/javascript" src="appPasteur/modules/energy/ups/point-manage/point-manage.module.js"></script>
+	<script type="text/javascript" src="appPasteur/modules/energy/ups/point-manage/point-manage.js"></script>
+	
 	<script type="text/javascript" src="appPasteur/modules/emergency/cctv/point-manage/point-manage.module.js"></script>
 	<script type="text/javascript" src="appPasteur/modules/emergency/cctv/point-manage/point-manage.js"></script>
 	<script type="text/javascript" src="appPasteur/modules/emergency/cctv/point-monitor/point-monitor.module.js"></script>
